k8-yaml/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80           #Internal Cluster port
      targetPort: 3000   # Inside pod
  type: ClusterIP
